# mofchecker

./: .bumpversion.cfg  .flake8  .gitattributes  .gitchangelog.rc  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  mypy.ini  new_cif.cif  outout.res  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml  release_me.yml
docs/: api.rst  background.rst  conf.py  developer_notes.rst  environment.yml  getting_started.rst  index.rst  logo.indd
docs/_static/: hash_comparison_mof_74.ai  wl_hash.ai
examples/: mof_feat.csv  run_checks.ipynb  test_on_core.ipynb  test_on_core.py
mofchecker/: __init__.py  _version.py  atomic_data.yml  cli.py  definitions.py  errors.py  hash.py  utils.py  zeopp.py
mofchecker/checks/: charge_check.py  check_base.py  floating_solvent.py  hash.py  zeopp.py
mofchecker/checks/data/: __init__.py  definitions.py
mofchecker/checks/global_structure/: __init__.py
mofchecker/checks/local_structure/: __init__.py  base_coordination_check.py  base_missing_check.py  false_oxo.py  geometry.py  overcoordinated_carbon.py  overcoordinated_hydrogen.py  overcoordinated_nitrogen.py  overlapping_atoms.py  undercoordinated_carbon.py  undercoordinated_nitrogen.py  undercoordinated_rare_earth.py
mofchecker/checks/oms/: __init__.py  definitions.py  errors.py
mofchecker/checks/utils/: __init__.py  get_indices.py
mofchecker/database/: __init__.py  composition_dict.pkl  graph_hash_dict.pkl  scaffold_hash_dict.pkl  symmetry_hash_dict.pkl
mofchecker/graph/: __init__.py  atom_typing_radii.yml  li_radii.yml  tuned_vesta.yml
mofchecker/symmetry/: __init__.py  hash.py
omsdetector/: __init__.py  definitions.py  utils.py
src/mofchecker/: __init__.py  _version.py  cli.py  definitions.py  errors.py  types.py  utils.py  version.py
src/mofchecker/checks/: __init__.py  charge_check.py  check_base.py  floating_solvent.py  zeopp.py
src/mofchecker/checks/data/: __init__.py  definitions.py
src/mofchecker/checks/global_structure/: __init__.py  graphcheck.py
src/mofchecker/checks/local_structure/: __init__.py  base_coordination_check.py  base_missing_check.py  false_oxo.py  geometrically_exposed_metal.py  geometry.py  overcoordinated_carbon.py  overcoordinated_hydrogen.py  overcoordinated_nitrogen.py  overlapping_atoms.py  undercoordinated_alkaline.py  undercoordinated_carbon.py  undercoordinated_nitrogen.py  undercoordinated_rare_earth.py
src/mofchecker/checks/oms/: __init__.py  definitions.py  errors.py
src/mofchecker/checks/utils/: __init__.py  geometry.py  get_indices.py
src/mofchecker/database/: __init__.py  composition_dict.pkl  scaffold_hash_dict.pkl  symmetry_hash_dict.pkl
src/mofchecker/graph/: __init__.py  tuned_vesta.yml
src/mofchecker/symmetry/: __init__.py  hash.py
tests/: __init__.py  conftest.py  test_cli.py  test_data.py  test_database.py  test_geometry.py  test_global_structure.py  test_graph.py  test_hash.py  test_local_structure.py  test_mofchecker.py  test_oms.py  test_omsdetector.py  test_symmetry.py  test_utils.py  test_zeopp.py
tests/checks/: local_structure.py  oms.py
tests/test_files/: 046_flu+N131+126_charge.cif  1246903.cif  1246903.res  1246903.vol  1246903_missing_H.cif  18141N2.cif  20211N2.cif  943643.cif  943644.cif  ABAVIJ_clean.cif  ABAXUZ.cif  ABEXEM_clean.cif  ABEXIQ_clean.cif  ABOVOF_FSR.cif  ABUBIK.cif  BIXVEM.cif  COKNUN.cif  Co3H8C16N5O42.cif  CoH5C7NO4.cif  Cu2H14C17N5O22.cif  CuPC2O3.cif  DALVIY_clean.cif  DEJCIF_clean.cif  ELIYUU_clean.cif  ELUQIM13_clean.cif  FAPXIG_clean.cif  FEZTIP_clean.cif  GADRAH_Ce_clean.cif  GADRAH_clean.cif  GUPQOA.cif  HKUST_floating.cif  La2H4C11N4O11.cif  MOF-74-Zn.cif  MOF-74-Zr-NH2.cif  MOF-74-Zr.cif  MOF_vdw_test.cif  MOHGOI.cif  N_MOF_asr.cif  NdH6C2O6.cif  ORIWET.cif  (+36 more)
