##########################
# Setup.py Configuration #
##########################
[metadata]
name = mofchecker
version = 0.10.0
description = Perform sanity checks for MOFs. 
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/kjappelbaum/mofchecker
download_url = https://github.com/kjappelbaum/mofchecker/releases
project_urls =
    Bug Tracker = https://github.com/kjappelbaum/mofchecker/issues
    Source Code = https://github.com/kjappelbaum/mofchecker

# Author information
author = Kevin Jablonka
author_email = kevin.jablonka@epfl.ch
maintainer = Kevin Jablonka
maintainer_email = kevin.jablonka@epfl.ch

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =

[options]
install_requires =
    pymatgen>=2022.0.15<2023
    click
    networkx>=2.5
    backports.cached-property
    ase
    pyyaml
    click
    pyeqeq

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
lint = 
    isort
    black
    flake8
    pre-commit
    bumpversion
tests =
    pytest
    tox
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext

[options.entry_points]
console_scripts =
    mofchecker = mofchecker.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = mofchecker
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/mofchecker
    .tox/*/lib/python*/site-packages/mofchecker

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
