##########################
# Setup.py Configuration #
##########################
[metadata]
name = mofchecker
version = 0.9.6-dev
description = Perform sanity checks for MOFs. 
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/kjappelbaum/mofchecker
download_url = https://github.com/kjappelbaum/mofchecker/releases
project_urls =
    Bug Tracker = https://github.com/kjappelbaum/mofchecker/issues
    Source Code = https://github.com/kjappelbaum/mofchecker

# Author information
author = Kevin Jablonka
author_email = mail@kjablonka.com
maintainer = Kevin Jablonka
maintainer_email = mail@kjablonka.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =

[options]
install_requires =
    click
    networkx>=2.5
    backports.cached-property
    ase
    pyyaml
    click
    pyeqeq
    structuregraph_helpers
    element_coder
    typing_extensions
    libconeangle # todo: make this optional

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
lint = 
    isort
    black
    flake8
    pre-commit
    bumpversion
tests =
    pytest
    tox
    coverage
docs =
    sphinx
    furo
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    sphinx_copybutton

[options.entry_points]
console_scripts =
    mofchecker = mofchecker.cli:run

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = mofchecker
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/mofchecker
    .tox/*/lib/python*/site-packages/mofchecker

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
    S101 # Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    mofchecker
    tests